modification de la couleur de fond

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ma Page Web</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<title>Travail Collaboratif</title>
+<style>
+body {background-color:gold;}
+</style>
 </head>
 <body>
 
@@ -10,7 +12,7 @@
 
 <p>Le premier paragraphe.</p>
 
-<p>Le deuxième paragraphe.</p>
+<p>Le deuxieme paragraphe (ajouté).</p>
 
 </body>
 </html>
